--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,23 @@
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+
 $body-bg:		#3498db;
-$navbar-inverse-bg:		#c0392b;
-$navbar-inverse-link-color: 	white;
+$font-family-sans-serif:	'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-default-bg:		#c0392b;
+$navbar-default-link-color: 	white;
 $brand-primary: #3498db;
+$brand-danger: #9b59b6;
 $jumbotron-bg: 	#ecf0f1;
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
+
+.carousel{width:640px;
+       height:360px;
+   		text-align: center;}
