--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,4 @@
-<center><font color="#ecf0f1">
+<font color="#ecf0f1">
 <h1>About us</h1>
 <p>We are working on our One Month Rails pinteresting app!</p>
 </font>
-<%= render 'pages/carousel' %></center>
