--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
-<div class="jumbotron center">
-	<h1>Welcome to my app!</h1>
-	<p><%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%> <%= render 'pages/modal' %></p>
+<!--<div class="jumbotron center"> -->
+<!--	<h1>Welcome to my app!</h1> -->
+<!-- <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%> -->
+
+
 
 
 <div class="jumbotron center">
