--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,15 @@
 
 
 <div class="jumbotron center">
-	<h1>Welcome to my app!</h1>
-	<p><%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%> 
-		<%= link_to "Log In", "#", class: "btn btn-danger btn-lg"%>
-	</p>
-</div>
+	<% if user_signed_in? %>
+		<h1>Welcome Back!</h1>
+	
+	<% else %>
+		<h1>Welcome to my app!</h1>
+		<p>
+			<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg"%> 
+			<%= link_to "Log In", new_user_session_path, class: "btn btn-danger btn-lg"%>
+		</p>
+	<% end %>
+
 </div>
