changed devise views

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,8 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
 
-$body-bg:		#3498db;
+$body-bg:		#bdc3c7;
 $font-family-sans-serif:	'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$navbar-default-bg:		#c0392b;
+$navbar-default-bg:		#3498db;
 $navbar-default-link-color: 	white;
 $brand-primary: #3498db;
 $brand-danger: #9b59b6;
