--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,12 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
 
-$body-bg:		#bdc3c7;
+$body-bg:		#ecf0f1;
 $font-family-sans-serif:	'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $navbar-default-bg:		#3498db;
 $navbar-default-link-color: 	white;
 $brand-primary: #3498db;
 $brand-danger: #9b59b6;
-$jumbotron-bg: 	#ecf0f1;
+$jumbotron-bg: 	white;
 
 @import 'bootstrap';
 
